--- a/views/detail-client.ejs
+++ b/views/detail-client.ejs
@@ -19,22 +19,29 @@
 <body>
 <div class="container">
     <nav id="navbar-ordine" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-        <a class="navbar-brand" href="#">Info Cliente</a>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdownAzioni" role="button"
-                       data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="false">
-                        Azioni
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownAzioni">
-                        <li><a class="dropdown-item" href="/client-list">Lista Clienti</a></li>
-                        <li><a class="dropdown-item" href="/home">Home</a></li>
-                    </ul>
-                </li>
-            </ul>
+        <div class="row justify-content-md-center">
+            <div class="col-md-auto">
+                <a class="navbar-brand" href="#">Info Cliente</a>
+            </div>
+            <div class="col-md-auto">
+                <div class="row justify-content-md-center navbar-collapse" id="navbarSupportedContent">
+                    <div class="col-md-auto">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="dropdownAzioni" role="button"
+                                   data-toggle="dropdown"
+                                   aria-haspopup="true" aria-expanded="false">
+                                    Azioni
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownAzioni">
+                                    <li><a class="dropdown-item" href="/client-list">Lista Clienti</a></li>
+                                    <li><a class="dropdown-item" href="/home">Home</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </nav>
     <% if (cazi && cazi === 'var') { %>
@@ -67,7 +74,7 @@
             <div class="form-group col">
                 <label>Nome e Cognome</label>
                 <input type="text" class="form-control" name="xcli" maxlength="60" value="<%= xcli %>"
-                       <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+                        <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
             </div>
         </div>
         <div class="form-row">
@@ -150,12 +157,12 @@
             <div class="form-group col">
                 <label>Abi</label>
                 <input type="number" class="form-control" name="cabi" maxlength="5" value="<%= cabi %>"
-                       <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+                        <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
             </div>
             <div class="form-group col">
                 <label>Cab</label>
                 <input type="number" class="form-control" name="ccab" maxlength="5" value="<%= ccab %>"
-                       <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+                        <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
             </div>
             <div class="form-group col">
                 <label>N° conto</label>
@@ -165,7 +172,8 @@
 
             <div class="form-group col">
                 <label>N° telefono</label>
-                <input type="tel" pattern="^[0-9-+s()]*$" class="form-control" name="ntel" maxlength="13" value="<%= ntel %>"
+                <input type="tel" pattern="^[0-9-+s()]*$" class="form-control" name="ntel" maxlength="13"
+                       value="<%= ntel %>"
                        required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
             </div>
         </div>
