--- a/views/new-client.ejs
+++ b/views/new-client.ejs
@@ -19,27 +19,35 @@
 <body>
 <div class="container">
     <nav id="navbar-ordine" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-        <a class="navbar-brand" href="#">Nuovo Cliente</a>
+        <div class="row justify-content-md-center">
+            <div class="col-md-auto">
+                <a class="navbar-brand" href="#">Nuovo Cliente</a>
+            </div>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdownAzioni" role="button"
-                       data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="false">
-                        Azioni
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownAzioni">
-                        <% if (newOrder == 's'){ %>
-                        <li><a class="dropdown-item" href="/new-order">Annulla</a></li>
-                        <% } else if (newOrder == 'n'){ %>
-                        <li><a class="dropdown-item" href="/client-list">Annulla</a></li>
-                        <% } else { %>
-                        <li><a class="dropdown-item" href="/home">Annulla</a></li>
-                        <% } %>
-                    </ul>
-                </li>
-            </ul>
+            <div class="col-md-auto">
+                <div class="row justify-content-md-center navbar-collapse" id="navbarSupportedContent">
+                    <div class="col-md-auto">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="dropdownAzioni" role="button"
+                                   data-toggle="dropdown"
+                                   aria-haspopup="true" aria-expanded="false">
+                                    Azioni
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownAzioni">
+                                    <% if (newOrder == 's'){ %>
+                                    <li><a class="dropdown-item" href="/new-order">Annulla</a></li>
+                                    <% } else if (newOrder == 'n'){ %>
+                                    <li><a class="dropdown-item" href="/client-list">Annulla</a></li>
+                                    <% } else { %>
+                                    <li><a class="dropdown-item" href="/home">Annulla</a></li>
+                                    <% } %>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </nav>
     <form action="/new-client" method="post" id="formNewCli">
@@ -60,7 +68,8 @@
             </div>
             <div class="form-group col">
                 <label>Partita I.V.A.</label>
-                <input type="text" pattern="^[0-9]{1,11}$" class="form-control" name="cpiva" maxlength="11" value="<%= cpiva %>"
+                <input type="text" pattern="^[0-9]{1,11}$" class="form-control" name="cpiva" maxlength="11"
+                       value="<%= cpiva %>"
                        required>
             </div>
         </div>
