--- a/views/new-order-cond-pag.ejs
+++ b/views/new-order-cond-pag.ejs
@@ -18,24 +18,33 @@
 </head>
 <body>
 <nav id="navbar-ordine" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-    <a class="navbar-brand" href="#">Nuovo Ordine <%= idOrd %></a>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdownAzioni" role="button"
-                   data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    Azioni
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="dropdownAzioni">
-                    <li><a class="dropdown-item" href="/new-order">Cliente</a></li>
-                    <li><a class="dropdown-item" href="/new-order-product">Prodotti</a></li>
-                    <li><a class="dropdown-item" href="/new-order-promo">Promozioni</a></li>
-                    <div class="dropdown-divider"></div>
-                    <li><a class="dropdown-item" href="/home">Annulla</a></li>
-                </ul>
-            </li>
-        </ul>
+    <div class="row justify-content-md-center">
+        <div class="col-md-auto">
+            <a class="navbar-brand" href="#">Nuovo Ordine <%= idOrd %></a>
+        </div>
+
+        <div class="col-md-auto">
+            <div class="row justify-content-md-center navbar-collapse" id="navbarSupportedContent">
+                <div class="col-md-auto">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="dropdownAzioni" role="button"
+                               data-toggle="dropdown"
+                               aria-haspopup="true" aria-expanded="false">
+                                Azioni
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownAzioni">
+                                <li><a class="dropdown-item" href="/new-order">Cliente</a></li>
+                                <li><a class="dropdown-item" href="/new-order-product">Prodotti</a></li>
+                                <li><a class="dropdown-item" href="/new-order-promo">Promozioni</a></li>
+                                <div class="dropdown-divider"></div>
+                                <li><a class="dropdown-item" href="/home">Annulla</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 </nav>
 <div class="container-fluid">
