--- a/views/new-order-sum.ejs
+++ b/views/new-order-sum.ejs
@@ -18,26 +18,34 @@
 </head>
 <body>
 <nav id="navbar-ordine" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-    <a class="navbar-brand" href="#">Nuovo Ordine <%= idOrd %></a>
+    <div class="row justify-content-md-center">
+        <div class="col-md-auto">
+            <a class="navbar-brand" href="#">Nuovo Ordine <%= idOrd %></a>
+        </div>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdownAzioni" role="button"
-                   data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    Azioni
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="dropdownAzioni">
-                    <li><a class="dropdown-item" href="/new-order">Cliente</a></li>
-                    <li><a class="dropdown-item" href="/new-order-product">Prodotti</a></li>
-                    <li><a class="dropdown-item" href="/new-order-promo">Promozioni</a></li>
-                    <li><a class="dropdown-item" href="/new-order-cond-pag">Condizioni di Pagamento</a></li>
-                    <div class="dropdown-divider"></div>
-                    <li><a class="dropdown-item" href="/home">Annulla</a></li>
-                </ul>
-            </li>
-        </ul>
+        <div class="col-md-auto">
+            <div class="row justify-content-md-center navbar-collapse" id="navbarSupportedContent">
+                <div class="col-md-auto">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="dropdownAzioni" role="button"
+                               data-toggle="dropdown"
+                               aria-haspopup="true" aria-expanded="false">
+                                Azioni
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownAzioni">
+                                <li><a class="dropdown-item" href="/new-order">Cliente</a></li>
+                                <li><a class="dropdown-item" href="/new-order-product">Prodotti</a></li>
+                                <li><a class="dropdown-item" href="/new-order-promo">Promozioni</a></li>
+                                <li><a class="dropdown-item" href="/new-order-cond-pag">Condizioni di Pagamento</a></li>
+                                <div class="dropdown-divider"></div>
+                                <li><a class="dropdown-item" href="/home">Annulla</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 </nav>
 <div class="container-fluid" data-target="#navbar-ordine">
@@ -125,27 +133,27 @@
                     </button>
                 </form>
                 <div class="modal fade" id="noteModal" tabindex="-1" role="dialog"
-                         aria-labelledby="noteModal" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title"
-                                        id="noteModalTitle">Aggiungi note all'ordine</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
+                     aria-labelledby="noteModal" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title"
+                                    id="noteModalTitle">Aggiungi note all'ordine</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
                                     <textarea class="form-control" name="xnote" maxlength="1000"
-                                           spellcheck="false" form="updateOrderNote"><%= xnota %></textarea>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
-                                    </button>
-                                </div>
+                                              spellcheck="false" form="updateOrderNote"><%= xnota %></textarea>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
+                                </button>
                             </div>
                         </div>
                     </div>
+                </div>
             </div>
         </div>
     </div>
