--- a/views/order-list.ejs
+++ b/views/order-list.ejs
@@ -19,39 +19,51 @@
 <body>
 <div class="sticky-top">
     <nav id="navbar-ordine" class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Lista Ordini</a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdownAzioni" role="button"
-                       data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="false">
-                        Azioni
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownAzioni">
-                        <li><a class="dropdown-item" href="/home">Home</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <form action="/order-list" method="post" class="form-inline">
-                <div class="form-row align-items-center">
-                    <div class="col-auto">
-                        <label class="sr-only" for="inlineFormRagSoc">Ragione sociale</label>
-                        <input type="text" name="xragsoc" class="form-control mb-2" id="inlineFormInputRagSoc"
-                               placeholder="Ragione sociale">
+        <div class="row justify-content-md-center">
+            <div class="col-md-auto">
+                <a class="navbar-brand" href="#">Lista Ordini</a>
+            </div>
+
+            <div class="col-md-auto">
+                <div class="row justify-content-md-center navbar-collapse" id="navbarSupportedContent">
+                    <div class="col-md-auto">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="dropdownAzioni" role="button"
+                                   data-toggle="dropdown"
+                                   aria-haspopup="true" aria-expanded="false">
+                                    Azioni
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownAzioni">
+                                    <li><a class="dropdown-item" href="/home">Home</a></li>
+                                </ul>
+                            </li>
+                        </ul>
                     </div>
-                    <% if (user.cage == 9999) { %>
-                    <div class="col-auto">
-                        <label class="sr-only" for="inlineFormCage">Codice agente</label>
-                        <input type="text" name="cageric" class="form-control mb-2" id="inlineFormInputCage"
-                               placeholder="Codice agente">
-                    </div>
-                    <% } %>
-                    <div class="col-auto">
-                        <button type="submit" class="btn btn-primary mb-2">Cerca</button>
+                    <div class="col-md-auto">
+                        <form action="/order-list" method="post" class="form-inline">
+                            <div class="form-row align-items-center">
+                                <div class="col-auto">
+                                    <label class="sr-only" for="inlineFormRagSoc">Ragione sociale</label>
+                                    <input type="text" name="xragsoc" class="form-control mb-2"
+                                           id="inlineFormInputRagSoc"
+                                           placeholder="Ragione sociale">
+                                </div>
+                                <% if (user.cage == 9999) { %>
+                                <div class="col-auto">
+                                    <label class="sr-only" for="inlineFormCage">Codice agente</label>
+                                    <input type="text" name="cageric" class="form-control mb-2" id="inlineFormInputCage"
+                                           placeholder="Codice agente">
+                                </div>
+                                <% } %>
+                                <div class="col-auto">
+                                    <button type="submit" class="btn btn-primary mb-2">Cerca</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
-            </form>
+            </div>
         </div>
     </nav>
 </div>
