--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title>Portale Innovazioni</title>
+    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <style>
