--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,8 @@
             padding-top: 80px;
         }
     </style>
+    <meta name="msapplication-TileImage" content="/img/icon-24x24.svg">
+    <meta name="msapplication-TileColor" content="#2F3BA2">
 </head>
 <body>
 <div class="container">
