--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
             padding-top: 80px;
         }
     </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="msapplication-TileImage" content="/img/icon-24x24.svg">
     <meta name="msapplication-TileColor" content="#2F3BA2">
 </head>
