--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,6 +11,7 @@
             padding-top: 80px;
         }
     </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <div class="container">
