--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
 <script>
 if('serviceWorker' in navigator) {
   navigator.serviceWorker
-           .register('/service-workerw.js')
+           .register('/service-worker.js')
            .then(function() { console.log("Service Worker Registered"); });
 }
 </script>
@@ -37,7 +37,7 @@ if('serviceWorker' in navigator) {
 <script>
   if ('serviceWorker' in navigator) {
     console.log("Will the service worker register?");
-    navigator.serviceWorker.register('service-worker.js')
+    navigator.serviceWorker.register('/service-worker.js')
       .then(function(reg){
         console.log("Yes, it did.");
       }).catch(function(err) {
