--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Portale Innovazioni</title>
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/public/manifest.json">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <style>
@@ -19,7 +19,7 @@
 <script>
 if('serviceWorker' in navigator) {
   navigator.serviceWorker
-           .register('/service-worker.js')
+           .register('/public/service-worker.js')
            .then(function() { console.log("Service Worker Registered"); });
 }
 </script>
@@ -37,7 +37,7 @@ if('serviceWorker' in navigator) {
 <script>
   if ('serviceWorker' in navigator) {
     console.log("Will the service worker register?");
-    navigator.serviceWorker.register('/service-worker.js')
+    navigator.serviceWorker.register('/public/service-worker.js')
       .then(function(reg){
         console.log("Yes, it did.");
       }).catch(function(err) {
