--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,15 +14,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="msapplication-TileImage" content="/img/icon-24x24.svg">
     <meta name="msapplication-TileColor" content="#2F3BA2">
+    <meta name="theme-color" content="#317EFB"/>
 </head>
 <body>
-<script>
-if('serviceWorker' in navigator) {
-  navigator.serviceWorker
-           .register('/public/service-worker.js')
-           .then(function() { console.log("Service Worker Registered"); });
-}
-</script>
 <div class="container">
     <div class="jumbotron text-center">
         <h1><span class="fa fa-lock"></span> Portale Innovazioni</h1>
@@ -36,12 +30,11 @@ if('serviceWorker' in navigator) {
 </body>
 <script>
   if ('serviceWorker' in navigator) {
-    console.log("Will the service worker register?");
     navigator.serviceWorker.register('/public/service-worker.js')
       .then(function(reg){
-        console.log("Yes, it did.");
+        console.log("Service worker registered!");
       }).catch(function(err) {
-        console.log("No it didn't. This happened: ", err)
+        console.log("There was some kind of problem... This happened: ", err)
       });
   }
 </script>
