--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,18 +3,19 @@
 <html>
 <head>
     <title>Portale Innovazioni</title>
-    <link rel="manifest" href="/public/manifest.json">
+    <!--<link rel="manifest" href="/public/manifest.json">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="msapplication-TileImage" content="/img/icon-24x24.svg">
+    <meta name="msapplication-TileColor" content="#2F3BA2">
+    <meta name="theme-color" content="#317EFB"/>-->
+    <% include /head %>
     <style>
         body {
             padding-top: 80px;
         }
     </style>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="msapplication-TileImage" content="/img/icon-24x24.svg">
-    <meta name="msapplication-TileColor" content="#2F3BA2">
-    <meta name="theme-color" content="#317EFB"/>
 </head>
 <body>
 <div class="container">
