--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,15 +3,16 @@
 <html>
 <head>
     <title>Portale Innovazioni</title>
-    <link rel="manifest" href="/manifest.json">
+    <!--<link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <% include /head %>
     <style>
         body {
             padding-top: 80px;
         }
     </style>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <div class="container">
