--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <meta name="msapplication-TileImage" content="/img/icon-24x24.svg">
     <meta name="msapplication-TileColor" content="#2F3BA2">
     <meta name="theme-color" content="#317EFB"/>-->
-    <% include /head %>
+    <% include head %>
     <style>
         body {
             padding-top: 80px;
