--- a/views/new-order.ejs
+++ b/views/new-order.ejs
@@ -17,7 +17,7 @@
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-    <% include /head %>
+    <% include head %>
 </head>
 <body>
 <div class="sticky-top">
