--- a/views/client-list.ejs
+++ b/views/client-list.ejs
@@ -1,6 +1,6 @@
 <!-- views/client-list.ejs -->
 <!doctype html>
-<html>
+<html lang="it">
 <head>
     <title>Portale Innovazioni - Lista clienti</title>
     <!--
