--- a/views/detail-client.ejs
+++ b/views/detail-client.ejs
@@ -1,6 +1,6 @@
 <!-- views/detail-client.ejs -->
 <!doctype html>
-<html>
+<html lang="it">
 <head>
     <title>Portale Innovazioni - Info cliente</title>
     <!--<link rel="manifest" href="/manifest.json">
