--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <!-- views/home.ejs -->
 <!doctype html>
-<html>
+<html lang="it">
 <head>
     <title>Portale Innovazioni</title>
     <!--<link rel="manifest" href="/public/manifest.json">
