--- a/views/new-order-promo.ejs
+++ b/views/new-order-promo.ejs
@@ -1,6 +1,6 @@
 <!-- views/new-order-promo.ejs -->
 <!doctype html>
-<html>
+<html lang="it">
 <head>
     <title>Portale Innovazioni - Nuovo ordine</title>
     <!--<link rel="manifest" href="/manifest.json">
