--- a/views/order-list.ejs
+++ b/views/order-list.ejs
@@ -1,6 +1,6 @@
 <!-- views/order-list.ejs -->
 <!doctype html>
-<html>
+<html lang="it">
 <head>
     <title>Portale Innovazioni - Lista ordini</title>
     <!--<link rel="manifest" href="/manifest.json">
