--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,6 +1,6 @@
 <!-- views/signup.ejs -->
 <!doctype html>
-<html>
+<html lang="it">
 <head>
     <title>Portale Innovazioni</title>
     <!--<link rel="manifest" href="/manifest.json">
