--- a/views/head.ejs
+++ b/views/head.ejs
@@ -18,6 +18,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
+    <script src="https://use.fontawesome.com/025507bc43.js"></script>
     <meta name="msapplication-TileColor" content="#9f00a7">
     <meta name="msapplication-TileImage" content="/public/img/icon-24x24.svg">
     <meta name="msapplication-config" content="/public/browserconfig.xml">
