--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,8 +24,8 @@
 
         <p>Entra o Registrati da qui:</p>
 
-        <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Entra</a>
-        <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Registrati</a>
+        <a href="/login" class="btn btn-primary"><span class="fa fa-user"></span> Entra</a>
+        <a href="/signup" class="btn btn-primary"><span class="fa fa-user"></span> Registrati</a>
     </div>
 </div>
 </body>
