--- a/views/new-client.ejs
+++ b/views/new-client.ejs
@@ -124,7 +124,7 @@
         </div>
 
         <div class="form-row">
-            <% if (user.cage == 9999) { %>
+            <% if (user.cage === 9999) { %>
             <div class="form-group col">
                 <label>Agente</label>
                 <input type="number" class="form-control" name="cage" maxlength="5" required>
