--- a/views/client-list.ejs
+++ b/views/client-list.ejs
@@ -84,7 +84,7 @@
                     <th scope="col">Agente</th>
                     <th></th>
                     <th></th>
-                    <% if (user.cage == 9999 || user.cage == 0) { %>
+                    <% if (user.cage === 9999 || user.cage === 0) { %>
                     <th></th>
                     <% } %>
                 </tr>
@@ -109,7 +109,7 @@
                             <button type="submit" class="btn btn-link"><i class="material-icons">&#xe254</i></button>
                         </form>
                     </td>
-                    <% if (user.cage == 9999) { %>
+                    <% if (user.cage === 9999) { %>
                     <td>
                         <form action="/get-csv-client" method="get">
                             <input type="hidden" name="ccod" value="<%= client.ccod %>">
