--- a/views/new-order-product.ejs
+++ b/views/new-order-product.ejs
@@ -152,6 +152,7 @@
                             <input type="hidden" name="xprodp" value="<%= xprod %>">
                             <input type="hidden" name="ccodprod" value="<%= products[i].ccod %>">
                             <input type="number" name="iqta" class="form-control">
+                            <input type="number" name="psco" class="form-control" value="0">
                             <button type="submit" class="btn-primary bg-transparent text-primary border-0 align-bottom">
                                 <i class="material-icons">&#xe854</i>
                             </button>
