corretto btn note in order-list

--- a/views/order-list.ejs
+++ b/views/order-list.ejs
@@ -102,8 +102,8 @@
                     <td>
                         <button class="btn btn-link"
                                 data-toggle="modal"
-                                data-target="#noteModal">
-                            <i class="material-icons" <%- (order.xnota && order.xnota != '') ? '' : 'disabled' %>>&#x<%- (order.xnota && order.xnota != '') ? 'e8cd' : 'e92a' %></i>
+                                data-target="#noteModal" <%- (order.xnota != '') ? '' : 'disabled' %>>
+                            <i class="material-icons">&#x<%- (order.xnota != '') ? 'e8cd' : 'e92a' %></i>
                         </button>
                         <div class="modal fade" id="noteModal" tabindex="-1" role="dialog"
                              aria-labelledby="noteModal" aria-hidden="true">
