corretto btn note in order-list

--- a/views/order-list.ejs
+++ b/views/order-list.ejs
@@ -118,7 +118,7 @@
                                     </div>
                                     <div class="modal-body">
                                     <textarea class="form-control" name="xnote" maxlength="1000"
-                                              spellcheck="false" form="orderNote" readonly><%= order.xnota %></textarea>
+                                              spellcheck="false" readonly><%= order.xnota %></textarea>
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
