--- a/views/new-order-promo.ejs
+++ b/views/new-order-promo.ejs
@@ -52,8 +52,8 @@
 </nav>
 <div class="container-fluid">
     <!-- show any messages that come back with authentication -->
-    <% if (message.length > 0) { %>
-    <div class="alert alert-danger"><%= message %></div>
+    <% if (messageErr.length > 0) { %>
+    <div class="alert alert-danger"><%= messageErr %></div>
     <div class="alert alert-warning">Ricaricare la pagina!</div>
     <% } %>
     <div data-spy="scroll" data-target="#navbar-ordine" data-offset="0">
