fix campioncini management

--- a/views/new-order-campioncini.ejs
+++ b/views/new-order-campioncini.ejs
@@ -95,7 +95,7 @@
                     <td><%= campioncini[i].xdesc %></td>
                     <td><%= campioncini[i].iprz %></td>
                     <td>
-                        <form action="/new-order-product" method="post" class="form-inline">
+                        <form action="/new-order-campioncini" method="post" class="form-inline">
                             <input type="hidden" name="ccod" value="<%= idOrd %>">
                             <input type="hidden" name="ccodc" value="<%= ccodc %>">
                             <input type="hidden" name="sgrpc" value="<%= sgrpc %>">
