GET /new-order-sum show campioncini

--- a/views/new-order-sum.ejs
+++ b/views/new-order-sum.ejs
@@ -98,6 +98,16 @@
                     <td><%= products[i].psco %></td>
                 </tr>
                 <% } %>
+                <% for(var j = 0; j < campioncini[j].length;i++) { %>
+                <tr>
+                    <th scope="row"><%= campioncini[j].ccod %></th>
+                    <td><%= campioncini[j].xdesc %></td>
+                    <td><%= campioncini[j].iprz %></td>
+                    <td><%= campioncini[j].iqta %></td>
+                    <td><%= campioncini[j].iimp %></td>
+                    <td><%= campioncini[j].psco %></td>
+                </tr>
+                <% } %>
                 </tbody>
                 <tfoot>
                 <tr>
