fix order total to 2 decimals

--- a/views/new-order-sum.ejs
+++ b/views/new-order-sum.ejs
@@ -115,7 +115,7 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <th scope="col"><%= itot %></th>
+                    <th scope="col"><%= itot.toFixed(2) %></th>
                 </tr>
                 </tfoot>
             </table>
