fix showing up campioncini

--- a/views/new-order-sum.ejs
+++ b/views/new-order-sum.ejs
@@ -98,7 +98,7 @@
                     <td><%= products[i].psco %></td>
                 </tr>
                 <% } %>
-                <% for(var j = 0; j < campioncini[j].length;j++) { %>
+                <% for(var j = 0; j < campioncini.length; j++) { %>
                 <tr>
                     <th scope="row"><%= campioncini[j].ccod %></th>
                     <td><%= campioncini[j].xdesc %></td>
