allow delete order if not already imported

--- a/views/order-list.ejs
+++ b/views/order-list.ejs
@@ -86,8 +86,8 @@
                     <th scope="col">Data</th>
                     <th></th>
                     <th></th>
-                    <% if (user.cage == 9999 || user.cage == 0) { %>
                     <th></th>
+                    <% if (user.cage == 9999 || user.cage == 0) { %>
                     <th></th>
                     <% } %>
                 </tr>
@@ -134,15 +134,22 @@
                             <input type="hidden" name="ccod" value="<%= order.ccod %>">
                             <button type="submit" class="btn btn-link"><i class="material-icons">&#xe254</i></button>
                         </form>
+                        <% } else {%>
+                        <form action="#" method="get">
+                            <input type="hidden" name="ccod" value="<%= order.ccod %>">
+                            <button type="submit" class="btn btn-link" disabled><i class="material-icons">&#xe254</i></button>
+                        </form>
                         <% } %>
                     </td>
-                    <% if (user.cage == 9999 || user.cage == 0) { %>
                     <td>
+                    <% if (order.cstt != 50  || user.cage == 9999 || user.cage == 0) { %>
                         <form action="/del-order" method="post">
                             <input type="hidden" name="ccod" value="<%= order.ccod %>">
                             <button type="submit" class="btn btn-link"><i class="material-icons">&#xe872</i></button>
                         </form>
+                    <% } %>
                     </td>
+                    <% if (user.cage == 9999 || user.cage == 0) { %>
                     <td>
                         <form action="/get-csv" method="get">
                             <input type="hidden" name="ccod" value="<%= order.ccod %>">
